# voice-to-data

./: .gitignore  CONTEXT.md  README.md  audit.py  pipeline.py  pyproject.toml  schema.py  validator.py
.github/workflows/: ci.yml
examples/: sample_run.py
