[project]
name = "voice-to-data"
version = "0.1.0"
description = "Voice-driven structured data extraction pipeline for laboratory notebooks — ASR, LLM extraction, domain validation, GxP audit trail"
readme = "README.md"
requires-python = ">=3.11"
license = {text=""}
authors = [{ name = "Antoine Lucas", email = "antoine.lucas.fra@gmail.com" }]
keywords = ["LLM", "ASR", "speech-to-text", "data-pipeline", "pharma", "lab-automation"]
dependencies = [
    "faster-whisper>=1.0.0",
    "instructor>=1.3.0",
    "pydantic>=2.0.0",
    "ollama>=0.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
